// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clear 1`] = `
<div>
  1000
</div>
`;

exports[`Clear2 1`] = `<div />`;

exports[`Client 1`] = `
Object {
  "%40react-libraries%2Fuse-ssr/Component01/": 100,
}
`;

exports[`Client 2`] = `
NodeList [
  200,1,
]
`;

exports[`Client 3`] = `
NodeList [
  200,0,
]
`;

exports[`Client 4`] = `
Object {
  "%40react-libraries%2Fuse-ssr/Component01/": 200,
}
`;

exports[`Client 5`] = `
NodeList [
  200,1,
  ,0,
]
`;

exports[`Client 6`] = `
Object {
  "%40react-libraries%2Fuse-ssr/Component01/": 100,
}
`;

exports[`Client 7`] = `
NodeList [
  200,0,
  ,0,
]
`;

exports[`Context 1`] = `
Object {
  "%40react-libraries%2Fuse-ssr/Component/02/": 1000,
  "%40react-libraries%2Fuse-ssr/Component01/": 100,
}
`;

exports[`Context 2`] = `
NodeList [
  200,0,
  ,0,
]
`;

exports[`Mutation-Query 1`] = `Object {}`;

exports[`Mutation-Query 2`] = `
NodeList [
  200,1,
  10,0,
  10,
  100,,
]
`;

exports[`SSR 1`] = `
Object {
  "%40react-libraries%2Fuse-ssr/Component/02/": 100,
  "%40react-libraries%2Fuse-ssr/Component01/": 100,
}
`;

exports[`SSR 2`] = `
NodeList [
  200,0,
  ,0,
]
`;
